tests/integration/tests/check_commands/CHECK/three_strings/04-negative_match_first_string_scanning_for_the_best_match/sample.itest
; RUN: cat "%S/filecheck.input" | (%FILECHECK_EXEC "%S/filecheck.check" 2>&1; test $? = 1) | %FILECHECK_TESTER_EXEC %s --match-full-lines
; CHECK: {{^.*}}FileCheck{{(\.py)?$}}
; CHECK-NEXT: {{.*filecheck.check:1:.*: error: CHECK: expected string not found in input$}}
; CHECK-NEXT: {{^}}; CHECK: foo{{$}}
; CHECK-NEXT: {{^}}         ^{{$}}
; CHECK-NEXT: {{^<stdin>:.*:.*: note: scanning from here$}}
; CHECK-NEXT: hello1
; CHECK-NEXT: {{^\^$}}
; CHECK-NEXT: {{^<stdin>:.*:.*: note: possible intended match here$}}
; CHECK-NEXT: {{^fo$}}

; TODO: https://github.com/stanislaw/FileCheck.py/issues/38
; CHECK-NEXT: {{^ ?\^$}}
; CHECK-EMPTY:
